# esp32_mem_blinds

./: .gitmodules  CMakeLists.txt  changelog.txt  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.old
GENERATE/: config.txt  generate.py
GENERATE/versiones/: 21000333_B_1.0.0.rfs  21000333_B_1.0.1.rfs  21000333_B_1.0.2.rfs  21000333_B_1.0.3.rfs  21000333_B_1.1.0.rfs  21000333_B_1.1.1.rfs  21000333_B_1.1.2.rfs  21000333_B_1.1.3.rfs  21000333_B_1.1.4.rfs  21000333_B_1.1.5.rfs  21000333_C_1.2.0.rfs  21000333_C_1.2.1.rfs  21000333_C_1.3.0.rfs  21000333_C_1.3.1.rfs  21000333_C_1.3.2.rfs  21000333_C_1.3.3.rfs  21000333_D_2.0.0.rfs  21000333_D_2.0.1.rfs  21000333_D_2.0.2.rfs  21000333_D_2.0.3.rfs  21000333_D_2.0.4.rfs  21000333_D_2.0.5.rfs  21000333_D_2.0.6.rfs  21000333_D_2.0.7.rfs  21000333_D_2.1.0.rfs  21000333_D_2.1.1.rfs  21000333_D_2.1.2.rfs  21000333_D_2.1.3.rfs  21000333_D_2.1.4.rfs  21000333_D_2.1.5.rfs  21000333_D_2.1.6.rfs  21000333_D_2.1.7.rfs  21000333_D_2.1.8.rfs  21000333_D_2.1.9.rfs  21000333_D_2.2.0.rfs  21000333_D_2.2.1.rfs  (+2 more)
main/: BLINDS_Button.c  BLINDS_Button.h  BLINDS_Device.c  BLINDS_Device.h  BLINDS_Feedback.c  BLINDS_Feedback.h  BLINDS_Load.c  BLINDS_Load.h  BLINDS_Meter.c  BLINDS_Meter.h  BLINDS_Relay.c  BLINDS_Relay.h  BLINDS_Testing.c  BLINDS_Testing.h  CMakeLists.txt  Kconfig  factory_testing.c  factory_testing.h  iram.lf  main.c
main/factory_modules/: test_blind.c  test_blind.h  test_button.c  test_button.h  test_leds.c  test_leds.h  test_meter.c  test_meter.h  test_relay.c  test_relay.h  test_rf.c  test_rf.h  test_sync.c  test_sync.h
